(lang dune 3.17)

(name aoc)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc)
 (synopsis "aoc in caml")
 (description "maybe until day 2")
 (depends ocaml)
 (tags
  ("aoc" "first time :)" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
